Fix alignment issue with select in mobile

--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -15,7 +15,7 @@
     margin: 20px 0;
   }
   .header-select-section{
-    width: 150px;
+    width: auto;
   }
   .select-categories-dropdown{
     transition: margin-top 1s ease-in-out;
@@ -48,6 +48,7 @@
     }
     .header-select-section{
       display: inline-block;
+      width: 150px;
     }
   }
 }
